Cleaned up code and fixed small errors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="eng">
 
 <head>
   <meta charset="utf-8">
@@ -75,30 +75,32 @@
     </section>
     <section id="work">
       <div class="content-wrapper">
-        <div class="section-1">
-          <i class="far fa-file-code"></i>
-          <h3>Hand-Coded HTML</h3>
-          <p>My focus is writing clean, well-formatted, semantic HTML5 by hand to make sure that 
+        <div class="content-container">
+          <div class="section-1">
+            <i class="far fa-file-code"></i>
+            <h3>Hand-Coded HTML</h3>
+            <p>My focus is writing clean, well-formatted, semantic HTML5 by hand to make sure that 
             the content is easy to read, easy to collaborate, trouble-shoot and accessible.</p>
-        </div>
-        <div class="section-2">
-          <i class="fab fa-css3"></i>
-          <h3>Well-organized CSS</h3>
-          <p>I pride myself on writing CSS that is easy to read and build on. I focus on 
+          </div>
+          <div class="section-2">
+            <i class="fab fa-css3"></i>
+            <h3>Well-organized CSS</h3>
+            <p>I pride myself on writing CSS that is easy to read and build on. I focus on 
             keeping my CSS lean and fast to load, and I make it a habit to stay up to date on current best practices.</p>
-        </div>
-        <div class="section-3">
-          <i class="fas fa-pencil-alt"></i>
-          <h3>Ease Converting Designs into Code</h3>
-          <p>You can trust me to take a designer's PSD and quickly & accurately convert it into a webpage that is 
+          </div>
+          <div class="section-3">
+            <i class="fas fa-pencil-alt"></i>
+            <h3>Ease Converting Designs into Code</h3>
+            <p>You can trust me to take a designer's PSD and quickly & accurately convert it into a webpage that is 
             pixel-perfect match.</p>
+          </div>
         </div>
       </div>
     </section>
     
-    <footer class="contact">
+    <footer id="contact">
       <div class="content-wrapper">
-        <div class="footer-img">
+        <div class="footer-img-continer">
           <figure>
             <img src="img/contact-image.png" alt="Person typing on computer keyboard" id="contact-img"/>
           </figure>
